Fakülte-Bölüm tabloları eklendi. Fakülte CRUD+View.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "DefaultConnection": "Server=.; Database=DuzceUniTezDB; Trusted_Connection=true; MultipleActiveResultSets=true",
+  "DefaultConnection": "Server=.; Database=DuzceUniTezDB_01; Trusted_Connection=true; MultipleActiveResultSets=true",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
