--- a/DuzceUniTez.csproj
+++ b/DuzceUniTez.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\content\imgs\" />
+  </ItemGroup>
+
 </Project>
