--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Path": {
+    "Images" :  "wwwroot/content/imgs"
   }
 }
